--- a/Robocom/Debug/makefile
+++ b/Robocom/Debug/makefile
@@ -65,8 +65,8 @@ all: main-build
 main-build: Robocom.elf secondary-outputs
 
 # Tool invocations
-Robocom.elf: $(OBJS) $(USER_OBJS) C:\Users\bosti\STM32CubeIDE\workspace_1.7.0\Robocom\STM32F411RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Robocom.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\bosti\STM32CubeIDE\workspace_1.7.0\Robocom\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Robocom.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Robocom.elf: $(OBJS) $(USER_OBJS) C:\Users\bosti\Documents\Dev\C\Robocom\Robocom\STM32F411RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Robocom.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\bosti\Documents\Dev\C\Robocom\Robocom\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Robocom.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
